added stat card page

--- a/views/index.html
+++ b/views/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>oryx portfolio</h1>
+    <a href="./statcard/index.html" class="href">stat preview component card</a>
 </body>
 </html>
