--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>oryx portfolio</h1>
-    <a href="./statcard/index.html" class="href">stat preview component card</a>
+    <a href="./statcard/index.html" class="href">stat preview component card</a> <br>
+    <a href="./ordersum/index.html" class="href">order summary component</a>
+
 </body>
 </html>
