added styling to landing

--- a/views/landingpage/index.html
+++ b/views/landingpage/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>oryxs</title>
 </head>
 <body>
     <h1>oryx portfolio</h1>
-    <a href="./statcard/index.html" class="href">stat preview component card</a> <br>
-    <a href="./ordersum/index.html" class="href">order summary component</a>
+    <a href="./statcard/index.html" class="href"><strong>stat preview component card</strong></a> <br><br>
+    <a href="./ordersum/index.html" class="href"><strong>order summary component</strong></a>
 
 </body>
 </html>
