added pricing component page

--- a/views/landingpage/index.html
+++ b/views/landingpage/index.html
@@ -16,8 +16,10 @@
     </header>
     
     <section class="links">
-        <a href="./statcard/index.html" class="statcard"><img src="./images/statsprev.PNG" alt="" class="portimg"></a> <br><br>
+        <a href="./pricing/index.html" class="ordersum"><img src="./images/pricingprev.PNG" alt="" class="portimg"></a>
+        <a href="./statcard/index.html" class="statcard"><img src="./images/statsprev.PNG" alt="" class="portimg"></a>
         <a href="./ordersum/index.html" class="ordersum"><img src="./images/orderprev.PNG" alt="" class="portimg"></a>
+        
     </section>
     
 </body>
