--- a/views/landingpage/styles.css
+++ b/views/landingpage/styles.css
@@ -36,7 +36,9 @@ a {
     width: auto;
     align-items: center;
     border-radius: 10px ;
-    border:rgb(49, 0, 43) solid 1px;
+    /* border:rgb(49, 0, 43) solid 1px; */
+    box-shadow: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
+                0.125em 0.125em 0.25em rgba(0,0,0,.15);
     transition: transform 750ms cubic-bezier(.5, 0, .5, 1),
         
 }
@@ -45,9 +47,9 @@ a {
     transform: scale(1.1);
 }
 
-@media (max-width: 375px) {
+@media (max-width: 830px) {
     .links {
         flex-direction: column;
-        gap: 0;
+        gap: 1em;
     }
 }
